src/html/pages/blog-post.scss
.pages__blog-post {
  h2 {
    font-size: 1.6em;
  }

  h3 { 
    font-size: 1.2em;
    --h-overline-height: 8px;
    --h-overline-outdent: 20px;
  }

  h4 {
    font-size: 1.15em;
    margin-bottom: 0;
    --h-overline-height: 4px;
    --h-overline-outdent: 14px;
  }

  h5 {
    font-size: 1.1em;
    margin-bottom: 0;
    --h-overline-height: 2px;
    --h-overline-outdent: 6px;
  }

  h3, h4, h5 {
    position: relative;
    &:after {
      position: absolute;
      height: 1em;
      margin-bottom: 4px;
      bottom: 0;
      content: ' ';
      display: block;
      width: calc(100% + var(--h-overline-outdent));
      margin-left: calc(-1 * var(--h-overline-outdent));
      border-top-width: var(--h-overline-height);
      border-top-style: solid;
      border-image: linear-gradient(to right, var(--color-secondary), transparent 20%) 1;
    }
  }
  min-height: calc(100vh - 8px - var(--blog-header-height));
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  [id] {
    z-index: -1;
    &:before {
      display: block; 
      content: " "; 
      margin-top: calc(-1 * var(--blog-header-height);
      height: var(--blog-header-height);; 
      visibility: hidden; 
      pointer-events: none;
    }
  }

  .pages__blog-post__body {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    margin-top: var(--blog-header-height);
  }

  .pages__blog-post__written-on {
    color: var(--color-secondary);
    font-style: italic;
  }

  .pages__blog-post__footer {
    padding: 8px;
  }
}

